# Blade

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Backlog.md  Blade.sln  BladeProjectGenerator.py  BladeProjectGenerator.sh  CMakeLists.txt  Dependencies.lua  GenerateVS2022Sln.bat  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  premake5.lua
BladeEngine/: BladeEngine.vcxproj  BladeEngine.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  premake5.lua
BladeEngine/src/: BladeEngine.hpp
BladeEngine/src/Audio/: AudioClip.cpp  AudioClip.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp  BladeAudio.hpp
BladeEngine/src/Components/: Components.hpp
BladeEngine/src/Core/: Base.hpp  Buffer.hpp  Camera.cpp  Camera.hpp  EntryPoint.cpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Log.cpp  Log.hpp  Math.hpp  Platform.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.hpp  Vec.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp
BladeEngine/src/ECS/: Entity.cpp  Entity.hpp  World.cpp  World.hpp
BladeEngine/src/Graphics/: Color.cpp  Color.hpp  Font.cpp  Font.hpp  GPUBuffers.hpp  GraphicsManager.cpp  GraphicsManager.hpp  MSDFData.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Texture2D.cpp  Texture2D.hpp  Vertex.cpp  Vertex.hpp
BladeEngine/src/Graphics/Platform/Vulkan/: BladeVulkanCommandPool.cpp  BladeVulkanCommandPool.hpp  BladeVulkanDescriptorPool.cpp  BladeVulkanDescriptorPool.hpp  BladeVulkanDevice.cpp  BladeVulkanDevice.hpp  BladeVulkanGraphicsPipeline.cpp  BladeVulkanGraphicsPipeline.hpp  BladeVulkanInstance.cpp  BladeVulkanInstance.hpp  BladeVulkanMesh.cpp  BladeVulkanMesh.hpp  BladeVulkanQueueFamily.cpp  BladeVulkanQueueFamily.hpp  BladeVulkanRenderer.cpp  BladeVulkanRenderer.hpp  BladeVulkanShader.cpp  BladeVulkanShader.hpp  BladeVulkanSwapchain.cpp  BladeVulkanSwapchain.hpp  BladeVulkanTexture.cpp  BladeVulkanTexture.hpp  BladeVulkanUtils.cpp  BladeVulkanUtils.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCheck.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanResourceAllocator.cpp  VulkanResourceAllocator.hpp
BladeEngine/src/Physics/: Physics2D.cpp  Physics2D.hpp
BladeEngine/src/Platform/Vulkan/: Init.cpp  Init.hpp  QueueFamily.cpp  QueueFamily.hpp  Swapchain.cpp  Swapchain.hpp  VulkanBuffers.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDescriptorSet.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanGraphicsAPI.cpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInit.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanQueue.cpp  VulkanQueue.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderer2D.cpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanValidationLayers.cpp  VulkanValidationLayers.hpp
BladeEngine/src/Renderer/: Camera.cpp  Camera.hpp  GraphicsAPI.hpp  Renderer2D.cpp  Renderer2D.hpp  Swapchain.hpp  Texture.hpp
BladeEngine/src/Utils/: Random.cpp  Random.hpp  Timer.hpp
Empty Project/src/: EmptyGame.cpp
EmptyProject/: CMakeLists.txt  Sandbox.vcxproj
EmptyProject/assets/shaders/: default.vert
EmptyProject/src/: EmptyGame.hpp
Sandbox/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Sandbox.vcxproj  Sandbox.vcxproj.filters  premake5.lua
Sandbox/assets/fonts/: Zerafoc_License.txt
Sandbox/assets/shaders/: default.frag  default.frag.spv  default.vert  default.vert.spv  default2.frag  defaultText.frag  defaultText.frag.spv  defaultText.vert  defaultText.vert.spv  newdefault.vert
Sandbox/src/: TestGame.cpp  TestGame.hpp
Template/: CMakeLists.txt
Template/src/: ExampleGame.cpp  ExampleGame.hpp  TemplateGame.cpp  TemplateGame.hpp
Template/src/Components/: GroundComponents.hpp  PlayerComponents.hpp  RaindropComponents.hpp
Template/src/Systems/: PlayerSystems.cpp  PlayerSystems.hpp  RaindropSystems.cpp  RaindropSystems.hpp
assets/shaders/: default.vert.spv
